# varion

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/varion_backend/: Cargo.toml  varion_backend.did
src/varion_backend/src/: lib.rs  model.onnx
src/varion_frontend/: index.html  package.json
src/varion_frontend/src/: App.jsx  main.jsx
src/varion_frontend/src/dashboard/: dashboard.jsx  patients.jsx
src/varion_frontend/src/landing/: homepage.jsx  roadmap.jsx
