[package]
name = "varion_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-macros = "0.15.0"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
getrandom = { version = "0.2.15", features = ["custom"] }
serde = "1.0.208"
prost = "0.11.0"
bytes = "1.5.0"
tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }